Adding appbarbuttons for better appereance

--- a/RejseplanenBand/MainPage.xaml
+++ b/RejseplanenBand/MainPage.xaml
@@ -10,18 +10,20 @@
     <ScrollViewer>
         <StackPanel Name="MainGrid" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
             <TextBlock x:Name="textBlock" HorizontalAlignment="Center" Margin="30" TextWrapping="WrapWholeWords" Text="REJSEBAND" FontWeight="Bold" FontSize="24" FontFamily="Cooper Black"/>
-            <TextBlock x:Name="SelectedStation1" HorizontalAlignment="Center" TextWrapping="WrapWholeWords" Padding="5" Text="Selected station 1" FontWeight="Bold" FontSize="16" FontFamily="Century Gothic"/>
-            <AutoSuggestBox x:Name="StationBox1" PlaceholderText="Name of the station" QueryIcon="Find" Width="250" TextChanged="StationsBox_TextChanged" SuggestionChosen="StationsBox_SuggestionChosen" QuerySubmitted="StationsBox_QuerySubmitted"/>
-            <TextBlock x:Name="SelectedStation2" Visibility="Collapsed" HorizontalAlignment="Center" TextWrapping="WrapWholeWords" Margin="0, 20, 0, 0" Padding="5" Text="Selected station 2" FontWeight="Bold" FontSize="16" FontFamily="Century Gothic"/>
-            <AutoSuggestBox x:Name="StationBox2" Visibility="Collapsed" PlaceholderText="Name of the station" QueryIcon="Find" Width="250" TextChanged="StationsBox_TextChanged" SuggestionChosen="StationsBox_SuggestionChosen" QuerySubmitted="StationsBox_QuerySubmitted"/>
-            <TextBlock x:Name="SelectedStation3" Visibility="Collapsed" HorizontalAlignment="Center" TextWrapping="WrapWholeWords" Margin="0, 20, 0, 0" Padding="5" Text="Selected station 3" FontWeight="Bold" FontSize="16" FontFamily="Century Gothic"/>
-            <AutoSuggestBox x:Name="StationBox3" Visibility="Collapsed" PlaceholderText="Name of the station" QueryIcon="Find" Width="250" TextChanged="StationsBox_TextChanged" SuggestionChosen="StationsBox_SuggestionChosen" QuerySubmitted="StationsBox_QuerySubmitted"/>
-            <TextBlock x:Name="SelectedStation4" Visibility="Collapsed" HorizontalAlignment="Center" TextWrapping="WrapWholeWords" Margin="0, 20, 0, 0" Padding="5" Text="Selected station 4" FontWeight="Bold" FontSize="16" FontFamily="Century Gothic"/>
-            <AutoSuggestBox x:Name="StationBox4" Visibility="Collapsed" PlaceholderText="Name of the station" QueryIcon="Find" Width="250" TextChanged="StationsBox_TextChanged" SuggestionChosen="StationsBox_SuggestionChosen" QuerySubmitted="StationsBox_QuerySubmitted"/>
-            <TextBlock x:Name="SelectedStation5" Visibility="Collapsed" HorizontalAlignment="Center" TextWrapping="WrapWholeWords" Margin="0, 20, 0, 0" Padding="5" Text="Selected station 5" FontWeight="Bold" FontSize="16" FontFamily="Century Gothic"/>
-            <AutoSuggestBox x:Name="StationBox5" Visibility="Collapsed" PlaceholderText="Name of the station" QueryIcon="Find" Width="250" TextChanged="StationsBox_TextChanged" SuggestionChosen="StationsBox_SuggestionChosen" QuerySubmitted="StationsBox_QuerySubmitted"/>
-            <Button x:Name="AddButton"    HorizontalAlignment="Stretch" Margin="100, 20, 100, 0" Content="Add" Click="AddButton_Click" />
-            <Button x:Name="RemoveButton" IsEnabled="False" HorizontalAlignment="Stretch" Margin="100, 10" Content="Remove" Click="RemoveButton_Click" />
+            <TextBlock x:Name="SelectedStation1" HorizontalAlignment="Center" TextWrapping="WrapWholeWords" Padding="5" Text="Selected station 1" FontWeight="Bold" FontSize="16" FontFamily="Cooper Black"/>
+            <AutoSuggestBox x:Name="StationBox1" PlaceholderText="Name of the station"  Width="250" TextChanged="StationsBox_TextChanged" SuggestionChosen="StationsBox_SuggestionChosen" />
+            <TextBlock x:Name="SelectedStation2" Visibility="Collapsed" HorizontalAlignment="Center" TextWrapping="WrapWholeWords" Margin="0, 20, 0, 0" Padding="5" Text="Selected station 2" FontWeight="Bold" FontSize="16" FontFamily="Cooper Black"/>
+            <AutoSuggestBox x:Name="StationBox2" Visibility="Collapsed" PlaceholderText="Name of the station" Width="250" TextChanged="StationsBox_TextChanged" SuggestionChosen="StationsBox_SuggestionChosen" />
+            <TextBlock x:Name="SelectedStation3" Visibility="Collapsed" HorizontalAlignment="Center" TextWrapping="WrapWholeWords" Margin="0, 20, 0, 0" Padding="5" Text="Selected station 3" FontWeight="Bold" FontSize="16" FontFamily="Cooper Black"/>
+            <AutoSuggestBox x:Name="StationBox3" Visibility="Collapsed" PlaceholderText="Name of the station" Width="250" TextChanged="StationsBox_TextChanged" SuggestionChosen="StationsBox_SuggestionChosen" />
+            <TextBlock x:Name="SelectedStation4" Visibility="Collapsed" HorizontalAlignment="Center" TextWrapping="WrapWholeWords" Margin="0, 20, 0, 0" Padding="5" Text="Selected station 4" FontWeight="Bold" FontSize="16" FontFamily="Cooper Black"/>
+            <AutoSuggestBox x:Name="StationBox4" Visibility="Collapsed" PlaceholderText="Name of the station" Width="250" TextChanged="StationsBox_TextChanged" SuggestionChosen="StationsBox_SuggestionChosen" />
+            <TextBlock x:Name="SelectedStation5" Visibility="Collapsed" HorizontalAlignment="Center" TextWrapping="WrapWholeWords" Margin="0, 20, 0, 0" Padding="5" Text="Selected station 5" FontWeight="Bold" FontSize="16" FontFamily="Cooper Black"/>
+            <AutoSuggestBox x:Name="StationBox5" Visibility="Collapsed" PlaceholderText="Name of the station" Width="250" TextChanged="StationsBox_TextChanged" SuggestionChosen="StationsBox_SuggestionChosen" />
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20">
+                <AppBarButton x:Name="RemoveButton" IsEnabled="False" Icon="Remove" Click="RemoveButton_Click"/>
+                <AppBarButton x:Name="AddButton" Icon="Add" Click="AddButton_Click"/>
+            </StackPanel>
         </StackPanel>
     </ScrollViewer>
 </Page>
